PA_Education/TestMenifest/force-app/main/default/objects/HolidayHistory__c/HolidayHistory__c.object-meta.xml
<CustomObject>
    <label>Holiday History</label>
    <nameField>
        <displayFormat>HH-{YY}{MM}-{0000}</displayFormat>
        <label>Holiday History Code</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>