PA_Education/TestMenifest/force-app/main/default/objects/HolidayHistory__c/fields/ChangeDT__c.field-meta.xml
<CustomField>
    <fullName>ChangeDT__c</fullName>
    <label>변경일시</label>
    <type>DateTime</type>
</CustomField>