PA_Education/TestMenifest/force-app/main/default/objects/HolidayHistory__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday</label>
    <referenceTo>Holiday__c</referenceTo>
    <relationshipLabel>Holiday History</relationshipLabel>
    <relationshipName>Holiday_History_Holiday</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>